feat: initial frontend

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/scss/pico.scss"
             ],
             "scripts": []
           },
